--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,11 +2,19 @@
 html,
 body,
 #app {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    min-width: 1366px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  min-width: 1366px;
 }
-.el-card{
-    box-shadow: 0 1px 1px rgba(0,0,0,0.15) !important;
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-steps {
+  margin: 16px 0;
+}
+
+.el-step__title {
+  font-size: 13px;
 }
